some changes with structure

--- a/simple-clock/index.html
+++ b/simple-clock/index.html
@@ -5,7 +5,9 @@
         <link rel="import" href="components/simple-clock" />
     </head>
     <body>
-        <h1>hell</h1>
+        <h1>hello webcomponents</h1>
+        <simple-clock></simple-clock>
+        <simple-clock></simple-clock>
         <simple-clock></simple-clock>
     </body>
 </html>
