--- a/simple-clock/index.html
+++ b/simple-clock/index.html
@@ -3,11 +3,11 @@
         <title>simple clock</title>
         <script src="node_modules/webcomponents.js/webcomponents-lite.min.js"></script>
         <link rel="import" href="components/simple-clock" />
+        <link rel="import" href="components/simple-calendar" />
     </head>
     <body>
         <h1>hello webcomponents</h1>
         <simple-clock></simple-clock>
-        <simple-clock></simple-clock>
-        <simple-clock></simple-clock>
+        <simple-calendar></simple-calendar>
     </body>
 </html>
